--- a/Type-on-Strap-master/_config.yml
+++ b/Type-on-Strap-master/_config.yml
@@ -22,14 +22,14 @@ theme_settings:
 
   # Icons
   rss: true  # Make sure you created a feed.xml with feed.xml layout
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: # Full email address, e.g. "j1wjdgus@gmail.com"
   behance:
   bitbucket:
   dribbble:
   facebook:
   flickr:
   gitlab:
-  github: "sylhare"
+  github: "SuperKimJungHyun"
   google_plus:
   instagram:
   keybase:
